[package]
name = "rust-bitcoin-prometheus"
version = "0.1.0"
authors = ["Hongchao Liu <lbs.lhc@gmail.com>"]
edition = "2019"

[dependencies]
rocket = "0.4.2"
reqwest = "0.9.19"
serde = "1.0.98"
prometheus = "0.7"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.3.0"
crossbeam = "0.7"
log = "0.4"